--- a/OcelotService/Ocelot.API.csproj
+++ b/OcelotService/Ocelot.API.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Ocelot" Version="22.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroServices.Shared\MicroServices.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
